--- a/index.html
+++ b/index.html
@@ -355,31 +355,31 @@
             </div>
         </div>
         <div class="delta">
-        <div class="row centered">
-            <div class="dottedin">
-                <div class="tilo-wrapper rozum-wrapper">
-                    <h2 class="aktyv-underline ringo doton">ДЛЯ РОЗУМУ</h2>
-                    <div class="tilo rozum"></div>
+            <div class="row centered">
+                <div class="dottedin">
+                    <div class="tilo-wrapper rozum-wrapper">
+                        <h2 class="aktyv-underline ringo doton">ДЛЯ РОЗУМУ</h2>
+                        <div class="tilo rozum"></div>
+                    </div>
                 </div>
-            </div>
-            <div class="col-xs-12 col-sm-12 rin">
-                <div class="circle col-sm-2 col-sm-offset-2">
-                    <img src="img\ico_round_ma.png" alt="МАФІЯ" class="image-tam">
-                    <span class="text_center post ma">МАФІЯ</span>
+                <div class="col-xs-12 col-sm-12 rin">
+                    <div class="circle col-xs-12 circle col-sm-2 col-sm-offset-2">
+                        <img src="img\ico_round_ma.png" alt="МАФІЯ" class="image-tam">
+                        <span class="text_center post ma">МАФІЯ</span>
+                    </div>
+                    <div class="circle col-xs-12 col-sm-2 ">
+                        <img src="img\dix.png" alt="DIXIT, TWINS, UNO, JENGA та ІНШІ" class="image-tam">
+                        <span class="text_center post dix">DIXIT, TWINS, UNO, JENGA та ІНШІ</span>
+                    </div>
+                    <div class="circle col-xs-12 col-sm-2">
+                        <img src="img\ico_round_pa.png" alt="ПАРАСТАС" class="image-tam">
+                        <span class="text_center post pa">ПАРАСТАС</span>
+                    </div>
+                    <div class="circle col-xs-12 col-sm-2 ">
+                        <img src="img\ico_round_zo.png" alt="ЗООПАРК" class="image-tam">
+                        <span class="text_center post zo">ЗООПАРК</span>
+                    </div>
                 </div>
-                <div class="circle col-xs-12 col-sm-2 ">
-                    <img src="img\dix.png" alt="DIXIT, TWINS, UNO, JENGA та ІНШІ" class="image-tam">
-                    <span class="text_center post dix">DIXIT, TWINS, UNO, JENGA та ІНШІ</span>
-                </div>
-                <div class="circle col-xs-12 col-sm-2">
-                    <img src="img\ico_round_pa.png" alt="ПАРАСТАС" class="image-tam">
-                    <span class="text_center post pa">ПАРАСТАС</span>
-                </div>
-                <div class="circle col-xs-12 col-sm-2 ">
-                    <img src="img\ico_round_zo.png" alt="ЗООПАРК" class="image-tam">
-                    <span class="text_center post zo">ЗООПАРК</span>
-                </div>
-           </div>
         </div>
             <div class="row centered">
                 <div class="tilo-wrapper samorozvytok-wrapper">
