--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
+
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -530,7 +531,31 @@
                 <span id="modal_close">X</span>
                 <div class="row centered">
                     <div class="col-md-10 col-md-offset-1">
-                        <form id="google-form" action="https://docs.google.com/forms/d/e/1FAIpQLScKi0W3SpbxiwvxmOP291a0wdJnLEQaXp6eIK3Q22G5HW87Cw/formResponse" method="post" enctype="text/plain" target="_blank">
+
+                        <script type="text/javascript">
+                            function checkTotal() {
+                                document.listForm.total.value = '';
+                                var sum = 0;
+                                for (i=0;i<document.getElementsByClassName('total').length;i++) {
+                                  if (document.getElementsByClassName('total')[i].checked) {
+                                    sum = sum + parseInt(document.getElementsByClassName('total')[i].value);
+                                  }
+                                }
+                                document.listForm.total.value = sum;    
+                            }
+                            function checkDiscount() {
+                                document.listForm.discount.value = '';
+                                var sum = 0;
+                                for (i=0;i<document.getElementsByClassName('total').length;i++) {
+                                  if (document.getElementsByClassName('total')[i].checked) {
+                                    sum = sum + parseInt(document.getElementsByClassName('total')[i].value * 0.2);
+                                  }
+                                }
+                                document.listForm.discount.value = sum ;
+                            }
+                        </script>
+
+                        <form name="listForm" id="google-form" action="https://docs.google.com/forms/d/e/1FAIpQLScKi0W3SpbxiwvxmOP291a0wdJnLEQaXp6eIK3Q22G5HW87Cw/formResponse" method="post" enctype="text/plain" target="_blank">
                             <span class="email__modal-text bold">
                                 Прізвище:
                             </span>
@@ -565,26 +590,28 @@
                             </span></br>
 
                             <div class="pick-race__wrapper">
-                                <input type="checkbox" name="entry.42356218" id='event1'>
+                                <input type="checkbox" name="entry.42356218" id='event1' class="total" value="890" onchange="checkTotal();checkDiscount()">
                                 <span class="email__modal-text"> 1. 22 червня – 30 червня; 16-26р.</span>
                                 </br>
 
-                                <input type="checkbox" name="entry.152859378"  id='event2'>
+                                <input type="checkbox" name="entry.152859378"  id='event2' class="total" value="890" onchange="checkTotal();checkDiscount()">
                                 <span class="email__modal-text"> 2. 30 червня – 08 липня; 16-26р.
                                 </span></br>
 
-                                <input type="checkbox" name="entry.777428256"  id='event3'>
+                                <input type="checkbox" name="entry.777428256"  id='event3' class="total" value="890" onchange="checkTotal();checkDiscount()">
                                 <span class="email__modal-text"> 3. 08 липня – 16 липня; 16-26р.
                                 </span></br>
 
-                                <input type="checkbox" name="entry.822357146" id='event4'>
+                                <input type="checkbox" name="entry.822357146" id='event4' class="total" value="890" onchange="checkTotal();checkDiscount()">
                                 <span class="email__modal-text"> 4. 16 липня – 24 липня; необмежений вік; програма не є обов'язковою
                                 </span></br>
 
-                                <input type="checkbox" name="entry.319410644" id='event5'>
+                                <input type="checkbox" name="entry.319410644" id='event5' class="total" value="890" onchange="checkTotal();checkDiscount()">
                                 <span class="email__modal-text"> 5. 24 липня – 1 серпня; 16-26р.
                                 </span>
                                 </br>
+                                Total: <input type="text" size="5" name="total" value="0"/>
+                                Discaunt: <input type="text" size="5" name="discount" value="0"/>
                             </div>
                             </br>
                             <input type="submit" value="Далі" class="email__submit" id="formSubmit">
