--- a/index.html
+++ b/index.html
@@ -534,24 +534,37 @@
 
                         <script type="text/javascript">
                             function checkTotal() {
-                                document.listForm.total.value = '';
-                                var sum = 0;
-                                for (i=0;i<document.getElementsByClassName('total').length;i++) {
-                                  if (document.getElementsByClassName('total')[i].checked) {
-                                    sum = sum + parseInt(document.getElementsByClassName('total')[i].value);
-                                  }
+                         
+                                var length = $('.total:checked').length;
+                                var value = 0;
+                                var discount = 0;
+                                switch (length) {
+                                  case 1:
+                                    value = 890;
+                                    discount = 0;
+                                    break;
+                                  case 2:
+                                    value = 1600;
+                                    discount = 180;
+                                    break;
+                                  case 3:
+                                    value = 2300
+                                    discount = 370;
+                                    break;
+                                   case 4:
+                                    value = 3000
+                                    discount = 560;
+                                   break;
+                                   case 5:
+                                    value = 3700
+                                    discount = 750;
+                                    break;
                                 }
-                                document.listForm.total.value = sum;    
+                                document.listForm.total.value = value;    
+                                document.listForm.discount.value = discount ;
                             }
+
                             function checkDiscount() {
-                                document.listForm.discount.value = '';
-                                var sum = 0;
-                                for (i=0;i<document.getElementsByClassName('total').length;i++) {
-                                  if (document.getElementsByClassName('total')[i].checked) {
-                                    sum = sum + parseInt(document.getElementsByClassName('total')[i].value * 0.2);
-                                  }
-                                }
-                                document.listForm.discount.value = sum ;
                             }
                         </script>
 
