Add non-editable input

--- a/index.html
+++ b/index.html
@@ -609,8 +609,8 @@
                                 <span class="email__modal-text"> 5. 24 липня – 1 серпня; 16-26р.
                                 </span>
                                 <br/><br/>
-                                До оплати: <input class="calculate_input" type="text" size="5" name="total" value="0"/>
-                                Економія: <input class="calculate_input" type="text" size="5" name="discount" value="0"/>
+                                До оплати: <input class="calculate_input" type="text" size="5" name="total" value="0" readonly/>
+                                Економія: <input class="calculate_input" type="text" size="5" name="discount" value="0" readonly/>
                             </div>
                             </br>
                             <input type="submit" value="Далі" class="email__submit" id="formSubmit">
