--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                 <i class="fa fa-phone" aria-hidden="true"></i>
                             </span>
                             <span class="phones__text">
-                                +38 097 220 78 30 
+                                +38 097 220 78 30
                                 <br>
                                 +38 063 066 02 93
                             </span>
@@ -100,7 +100,9 @@
     <!-- main page -->
     <a id="golovna_anchor"></a>
     <div id="golovna">
-    <div class="main-background">
+      <video autoplay loop muted class="bgvideo">
+        <source src="video/fon.mp4" type="video/mp4"></source>
+      </video>
         <div class="container">
             <div class="row centered">
                 <div class="col-lg-8 col-lg-offset-2 img-block1_1">
@@ -534,7 +536,7 @@
 
                         <script type="text/javascript">
                             function checkTotal() {
-                         
+
                                 var length = $('.total:checked').length;
                                 var value = 0;
                                 var discount = 0;
@@ -560,7 +562,7 @@
                                     discount = 750;
                                     break;
                                 }
-                                document.listForm.total.value = value;    
+                                document.listForm.total.value = value;
                                 document.listForm.discount.value = discount ;
                             }
 
@@ -844,7 +846,7 @@
     <script src="./js/iframevideo.js"></script>
     <script src="./js/checked_form.js"></script>
 
-   
+
 
 </body>
 </html>
