--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Молодіжний табір Alive Camp 2017 – незабутній активний відпочинок!</title>
-    <meta name="description" content="Літній молодіжний табір Alive Camp на Шацьких озерах – це нові знайомства · спортивні ігри, турніри, квести · незабутні вечірки · English Club · розвиваючі ігри · курс про стосунки · уроки гітари · незабутнє літо · чисте, мальовниче озеро · свіже повітря та багато іншого! Відчуй себе живим! 2017"> 
+    <meta name="description" content="Літній молодіжний табір Alive Camp на Шацьких озерах – це нові знайомства · спортивні ігри, турніри, квести · незабутні вечірки · English Club · розвиваючі ігри · курс про стосунки · уроки гітари · незабутнє літо · чисте, мальовниче озеро · свіже повітря та багато іншого! Відчуй себе живим! 2017">
     <!-- favicone connection -->
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
@@ -134,7 +134,7 @@
     </nav>
     <!-- main page -->
     <a id="golovna_anchor"></a>
-    <div id="golovna">
+    <div class="golovna">
       <video autoplay loop muted class="bgvideo">
         <source src="video/fon.mp4" type="video/mp4"></source>
       </video>
@@ -567,18 +567,18 @@
                             <span class="modal__description">Підпишись на новини про молодіжні заходи:</span>
 
                             <form name="subscribeForm" id="subscribe-form" action="https://docs.google.com/forms/d/e/1FAIpQLSfrsvgYLpoFSRnwzYToKVGI6McdEDY_xuOxte-FSIicmqkiXA/formResponse" method="post" enctype="text/plain" target="_blank">
-                            
+
                                 <span class="email__modal-text bold subscribe-title">
                                     E-mail:
                                 </span>
                                 </br>
 
-                                <input type="email" name="entry.611479963" id='subscribe-email' class="subscribe-input" required> 
-                                </br>    
+                                <input type="email" name="entry.611479963" id='subscribe-email' class="subscribe-input" required>
+                                </br>
                                 <input type="submit" value="Підписатись" class="email__submit">
 
                             </form>
-    
+
                             </br>
                         </div>
                     </div>
@@ -904,9 +904,9 @@
     <script src="./js/iframevideo.js"></script>
     <script src="./js/checked_form.js"></script>
 
-    <!-- Yandex.Metrika counter --> 
-    <script type="text/javascript"> (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter44575906 = new Ya.Metrika({ id:44575906, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, trackHash:true, ut:"noindex" }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); 
-    </script> 
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript"> (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter44575906 = new Ya.Metrika({ id:44575906, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, trackHash:true, ut:"noindex" }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks");
+    </script>
     <!-- /Yandex.Metrika counter -->
 </body>
 </html>
