back to old background img, fix fonts

--- a/index.html
+++ b/index.html
@@ -156,10 +156,8 @@
     </nav>
     <!-- main page -->
     <a id="golovna_anchor"></a>
-    <div class="golovna">
-      <video autoplay loop muted class="bgvideo">
-        <source src="video/fon.mp4" type="video/mp4"></source>
-      </video>
+    <div id="golovna">
+    <div class="main-background">
         <div class="container">
             <div class="row centered">
                 <div class="col-lg-8 col-lg-offset-2 img-block1_1">
