disable first race

--- a/index.html
+++ b/index.html
@@ -682,8 +682,8 @@
                                 Вибір заїзду:
                             </span></br>
                             <div class="pick-race__wrapper">
-                                <input type="checkbox" name="entry.42356218" id='event1' class="total" value="890" onchange="checkTotal();checkDiscount()">
-                                <span class="email__modal-text"> 1. 22 червня – 30 червня; 16-26р.</span>
+                                <input type="checkbox" name="entry.42356218" id='event1' class="total" value="890" onchange="checkTotal();checkDiscount()" disabled>
+                                <span class="email__modal-text"> <strike>1. 22 червня – 30 червня; 16-26р.</strike></span>
                                 </br>
 
                                 <input type="checkbox" name="entry.152859378"  id='event2' class="total" value="890" onchange="checkTotal();checkDiscount()">
