--- a/index.html
+++ b/index.html
@@ -538,20 +538,23 @@
             </div>
         </div>
         <div class="row centered reg_footer">
-            <div class="col-md-10 col-md-offset-1">
+            <div class="col-md-12">
         <div class="row">
-            <div class="col-md-10 col-md-offset-1">
+            <div class="col-md-12">
                 <div class="reg__section_white-line"></div>
             </div>
         </div>
-        <img src="img/fance_thin.png" class="img-responsive reg-fance-img">
-                <div class="row centered">
-                    <div class="col-md-8 col-md-offset-2 reg-discount__wrapper">
-                        <p class="reg__discount">
-                            АКЦІЯ! ПРИ ПОЇЗДЦІ НА ДВА І БІЛЬШЕ ЗАЇЗДІВ ALIVECAMP, НА КОЖЕН НАСТУПНИЙ ЗАЇЗД НАДАЄТЬСЯ <span>ЗНИЖКА 20%!</span>
-                        </p>
-                    </div>
-                </div>
+        <div class="row discount-new__row"> 
+            <div class="col-md-4 discount-new">
+              <h3><span>Акція!</span> При поїздці на два і більше заїздів alivecamp, на кожен наступний заїзд надається <span>знижка 20%!</span> </h3>
+            </div>
+            <div class="col-md-4">
+              <img src="img/fance_new.png" alt="schedule", class="img-responsive fance-new">
+            </div>
+            <div class="col-md-4 discount-new">
+              <h3><span>Не пропусти!!! <br> </span> Надаємо <span>знижку 5%</span> для тих, хто зареєструється <span>з 10 по 11 червня!</span> </h3>
+            </div>
+        </div>
                 <p class="reg__additional-info">
                     *  Реєстрації вважається дійсною лише після виконання всіх трьох кроків, які подані вище;</br>
                     ** У вартість входить: оренда локації, харчування, організаційні витрати, подарунки (доїзд/від'їзд не включений в оплату);</br>
