--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
               <img src="img/fance_new.png" alt="schedule", class="img-responsive fance-new">
             </div>
             <div class="col-md-4 discount-new">
-              <h3><span>Не пропусти!!! <br> </span> Надаємо <span>знижку 5%</span> для тих, хто зареєструється <span>з 10 по 11 червня!</span> </h3>
+              <h3><span>Не пропусти!!! <br> </span> Надаємо <span>знижку 5%</span> для тих, хто зареєструється <span> <br> з 10 по 11 червня!</span> </h3>
             </div>
         </div>
                 <p class="reg__additional-info">
