--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
               <h3><span>Акція!</span> При поїздці на два і більше заїздів alivecamp, на кожен наступний заїзд надається <span>знижка 20%!</span> </h3>
             </div>
             <div class="col-md-4">
-              <img src="img/fance_new.png" alt="schedule", class="img-responsive fance-new">
+              <img src="img/fance_new1.png" alt="schedule", class="img-responsive fance-new">
             </div>
             <div class="col-md-4 discount-new">
               <h3><span>Не пропусти!!! <br> </span> Надаємо <span>знижку 5%</span> для тих, хто зареєструється <span> <br> з 10 по 11 червня!</span> </h3>
