Edit dates-table and price-registration

--- a/index.html
+++ b/index.html
@@ -237,12 +237,12 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr class="strikeout">
+                            <tr class="strikeout1">
                                 <td><span>1</span></td>
                                 <td class="table-dashed">З 22 ПО 30 ЧЕРВНЯ</td>
                                 <td>16-26 РОКІВ</td>
                             </tr>
-                            <tr>
+                            <tr class="strikeout2">
                                 <td><span>2</span></td>
                                 <td>З 30 ЧЕРВНЯ ПО 8 ЛИПНЯ</td>
                                 <td>16-26 РОКІВ</td>
@@ -689,9 +689,9 @@
                                 <span class="email__modal-text"> <strike>1. 22 червня – 30 червня; 16-26р.</strike></span>
                                 </br>
 
-                                <input type="checkbox" name="entry.152859378"  id='event2' class="total" value="890" onchange="checkTotal();checkDiscount()">
-                                <span class="email__modal-text"> 2. 30 червня – 08 липня; 16-26р.
-                                </span></br>
+                                <input type="checkbox" name="entry.152859378"  id='event2' class="total" value="890" onchange="checkTotal();checkDiscount()" disabled>
+                                <span class="email__modal-text"> <strike>2. 30 червня – 08 липня; 16-26р.</strike></span>
+                                </br>
 
                                 <input type="checkbox" name="entry.777428256"  id='event3' class="total" value="890" onchange="checkTotal();checkDiscount()">
                                 <span class="email__modal-text"> 3. 08 липня – 16 липня; 16-26р.
