disable old race

--- a/index.html
+++ b/index.html
@@ -247,12 +247,12 @@
                                 <td>З 30 ЧЕРВНЯ ПО 8 ЛИПНЯ</td>
                                 <td>16-26 РОКІВ</td>
                             </tr>
-                            <tr>
+                            <tr class="strikeout3">
                                 <td><span>3</span></td>
                                 <td>З 8 ПО 16 ЛИПНЯ</td>
                                 <td>16-26 РОКІВ</td>
                             </tr>
-                            <tr class="table-backdown">
+                            <tr class="table-backdown strikeout4">
                                 <td><span>4</span></td>
                                 <td>З 16 ПО 24 ЛИПНЯ <strong>LITE</strong><small>&#9913</small></td>
                                 <td>ВІК УЧАСНИКІВ<br/>НЕОБМЕЖЕНИЙ</td>
@@ -693,12 +693,12 @@
                                 <span class="email__modal-text"> <strike>2. 30 червня – 08 липня; 16-26р.</strike></span>
                                 </br>
 
-                                <input type="checkbox" name="entry.777428256"  id='event3' class="total" value="890" onchange="checkTotal();checkDiscount()">
-                                <span class="email__modal-text"> 3. 08 липня – 16 липня; 16-26р.
+                                <input type="checkbox" name="entry.777428256"  id='event3' class="total" value="890" onchange="checkTotal();checkDiscount()" disabled>
+                                <span class="email__modal-text"> <strike>3. 08 липня – 16 липня; 16-26р.</strike>
                                 </span></br>
 
-                                <input type="checkbox" name="entry.822357146" id='event4' class="total" value="890" onchange="checkTotal();checkDiscount()">
-                                <span class="email__modal-text"> 4. 16 липня – 24 липня; необмежений вік; програма не є обов'язковою
+                                <input type="checkbox" name="entry.822357146" id='event4' class="total" value="890" onchange="checkTotal();checkDiscount()" disabled>
+                                <span class="email__modal-text"> <strike>4. 16 липня – 24 липня; необмежений вік; програма не є обов'язковою</strike>
                                 </span></br>
 
                                 <input type="checkbox" name="entry.319410644" id='event5' class="total" value="890" onchange="checkTotal();checkDiscount()">
